<resources>
    <string name="app_name">ZenStudy</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_calendar">Calendar</string>
    <string name="bottom_nav_study">Study</string>
    <string name="bottom_nav_stats">Stats</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="layout_select_module_popup_text">Select Module</string>
    <string name="title_activity_init">InitActivity</string>
    <plurals name="card_count">
        <item quantity="one">%d card</item>
        <item quantity="other">%d cards</item>
    </plurals>
    <string-array name="resource_types">
        <item>File</item>
        <item>Image</item>
        <item>Video</item>
        <item>Audio</item>
        <item>PDF</item>
        <item>Text</item>
        <item>Document</item>
        <item>Link</item>
        <item>Note</item>
    </string-array>
    <string name="add_subject">Add Subject</string>
    <string name="edit_subject">Edit Subject</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure you want to delete "%1$s"?</string>
    <string name="search_subjects">Search subjects...</string>
    <string name="add_subject_accessibility">Add subject</string>
    <string name="no_subjects_yet">No subjects yet</string>
    <string name="add_first_subject_hint">Add your first subject using the + button</string>
    <string name="subject_name_label">Subject name</string>
    <string name="edit">Edit</string>
    <string name="delete_action">Delete</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_description">Enter description (optional)</string>
    <string name="subject_add_success">Subject added successfully</string>
    <string name="subject_update_success">Subject updated successfully</string>
</resources>