<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_selector"
        android:title="@string/bottom_nav_calendar" />
    <item
        android:id="@+id/navigation_study"
        android:icon="@drawable/ic_study_selector"
        android:title="@string/bottom_nav_study" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats_selector"
        android:title="@string/bottom_nav_stats" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_selector"
        android:title="@string/bottom_nav_settings" />
</menu>